# ember

./: Cargo.toml  LICENSE  README.md
crates/ember-term/: Cargo.toml
crates/ember-term/src/: lib.rs
crates/ember-tui/: Cargo.toml
crates/ember-tui/src/: main.rs
crates/launcher-core/: Cargo.toml
crates/launcher-core/src/: auth.rs  download.rs  import.rs  install.rs  instance.rs  launch.rs  lib.rs  manage.rs  manifest.rs  modpack.rs  modrinth.rs  sync.rs  update.rs
docs/: PRIVACY.md  TERMS.md
