[workspace]
resolver = "2"
members = ["crates/launcher-core", "crates/ember-term", "crates/ember-tui"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/positronic-ai/ember"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
sha1 = "0.10"
hex = "0.4"
anyhow = "1"
thiserror = "2"
walkdir = "2"
futures-util = "0.3"
portable-pty = "0.9"
vt100 = "0.15"
zip = "2"
ratatui = "0.29"
crossterm = "0.28"
