[package]
name = "ember-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for the ember Minecraft launcher."

[dependencies]
launcher-core = { path = "../launcher-core" }
ember-term = { path = "../ember-term" }
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true

[[bin]]
name = "ember-tui"
path = "src/main.rs"
