[package]
name = "launcher-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "UI-agnostic core for the ember Minecraft launcher: manifest, resolver, download, launch."

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
reqwest.workspace = true
sha1.workspace = true
hex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true
futures-util.workspace = true

[[bin]]
name = "ember"
path = "src/bin/ember.rs"
